mobile popup alignment fix

--- a/CSS/popup-style.css
+++ b/CSS/popup-style.css
@@ -76,8 +76,8 @@
     position: fixed;
     top: auto;
     bottom: 10vh;
-    left: 20%;
-    width: 60%;
+    left: 15%;
+    width: 70%;
 }
 
 .mobile-popup .cross-info {
